[gd_scene load_steps=13 format=3 uid="uid://xwwdv0rc1i5s"]

[ext_resource type="Theme" uid="uid://dtqfsbjdbbwas" path="res://UI_Theme/PlayTest.tres" id="1_mn8y5"]
[ext_resource type="Script" path="res://Core/CustomUIElements/AnimatedToggle.gd" id="2_jt658"]
[ext_resource type="Texture2D" uid="uid://uhqk7sjpapxp" path="res://Assets/Graphics/UI/checkButton.png" id="3_88e3s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qw0yg"]
atlas = ExtResource("3_88e3s")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_plmiw"]
atlas = ExtResource("3_88e3s")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wucva"]
atlas = ExtResource("3_88e3s")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8c2ty"]
atlas = ExtResource("3_88e3s")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeihc"]
atlas = ExtResource("3_88e3s")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hufl0"]
atlas = ExtResource("3_88e3s")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcud1"]
atlas = ExtResource("3_88e3s")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gc83"]
atlas = ExtResource("3_88e3s")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nni16"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw0yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_plmiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wucva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8c2ty")
}],
"loop": false,
"name": &"Off",
"speed": 45.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qeihc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hufl0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcud1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gc83")
}],
"loop": false,
"name": &"On",
"speed": 45.0
}]

[node name="button" type="Button"]
custom_minimum_size = Vector2(160, 80)
theme = ExtResource("1_mn8y5")
flat = true
script = ExtResource("2_jt658")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.560784, 0.560784, 0.560784, 1)
texture_filter = 1
position = Vector2(80, 40)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_nni16")
animation = &"Off"
frame = 3
frame_progress = 1.0

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
